--- a/LightBnB_WebApp-master/sass/_property-listings.scss
+++ b/LightBnB_WebApp-master/sass/_property-listings.scss
@@ -9,7 +9,7 @@
   margin: 20px 0;
   width: 100%;
   max-width: 600px;
-  height: 230px;
+  height: 260px;
   border: 1px solid black;
   box-sizing: border-box;
   display: flex;
@@ -42,6 +42,9 @@
 
   .review_count:hover {
     color: blue;
+  }
+  .property-listing__details{
+    padding : 10px;
   }
 }
 
